--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <title>CV</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./style.css" />
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
     <h1 class="title">Vera Korzun</h1>
@@ -23,7 +21,7 @@
             <h3 class="second-title">Contacts</h3>
             <ul class="list contacts-list">
               <li class="contacts-list-item">
-                <a class="link contacts-link" href="tel:+46765771605">
+                <a class="contacts-link" href="tel:+46765771605">
                   +46765771605
                 </a>
               </li>
