fix: change index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </li>
               <li class="contacts-list-item">
                 <a
-                  class="link contacts-link"
+                  class="contacts-link"
                   href="mailto:veraminich@gmail.com"
                 >
                   veraminich@gmail.com
@@ -35,7 +35,7 @@
               </li>
               <li class="contacts-list-item">
                 <a
-                  class="link contacts-link"
+                  class="contacts-link"
                   href="https://www.linkedin.com/in/vera-korzun-176ab598/"
                   target="_blank"
                 >
@@ -44,7 +44,7 @@
               </li>
               <li class="contacts-list-item">
                 <a
-                  class="link contacts-link"
+                  class="contacts-link"
                   href="https://t.me/Vera_KM"
                   target="_blank"
                 >Vera_KM </a>
