--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <meta>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link
@@ -12,43 +12,36 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  </head>
+  <body>
     <h1 class="title">Vera Korzun</h1>
     <h2 class="title-second">Front-end developer</h2>
-          <section class="contacts">
-            <h3 class="second-title">Contacts</h3>
-            <ul class="list contacts-list">
-              <li class="contacts-list-item">
-                <a class="contacts-link" href="tel:+46765771605">
-                  +46765771605
-                </a>
-              </li>
-              <li class="contacts-list-item">
-                <a
-                  class="contacts-link"
-                  href="mailto:veraminich@gmail.com"
-                >
-                  veraminich@gmail.com
-                </a>
-              </li>
-              <li class="contacts-list-item">
-                <a
-                  class="contacts-link"
-                  href="https://www.linkedin.com/in/vera-korzun-176ab598/"
-                  target="_blank"
-                >
-                  Vera-Korzun
-                </a>
-              </li>
-              <li class="contacts-list-item">
-                <a
-                  class="contacts-link"
-                  href="https://t.me/Vera_KM"
-                  target="_blank"
-                >Vera_KM </a>
-              </li>
-            </ul>
-          </section>
-</body>
+    <section class="contacts">
+      <h3 class="second-title">Contacts</h3>
+      <ul class="list contacts-list">
+        <li class="contacts-list-item">
+          <a class="contacts-link" href="tel:+46765771605"> +46765771605 </a>
+        </li>
+        <li class="contacts-list-item">
+          <a class="contacts-link" href="mailto:veraminich@gmail.com">
+            veraminich@gmail.com
+          </a>
+        </li>
+        <li class="contacts-list-item">
+          <a
+            class="contacts-link"
+            href="https://www.linkedin.com/in/vera-korzun-176ab598/"
+            target="_blank"
+          >
+            Vera-Korzun
+          </a>
+        </li>
+        <li class="contacts-list-item">
+          <a class="contacts-link" href="https://t.me/Vera_KM" target="_blank"
+            >Vera_KM
+          </a>
+        </li>
+      </ul>
+    </section>
+  </body>
 </html>
