feat: add basic markup

--- a/index.html
+++ b/index.html
@@ -13,35 +13,180 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <h1 class="title">Vera Korzun</h1>
-    <h2 class="title-second">Front-end developer</h2>
-    <section class="contacts">
-      <h3 class="second-title">Contacts</h3>
-      <ul class="list contacts-list">
-        <li class="contacts-list-item">
-          <a class="contacts-link" href="tel:+46765771605"> +46765771605 </a>
-        </li>
-        <li class="contacts-list-item">
-          <a class="contacts-link" href="mailto:veraminich@gmail.com">
-            veraminich@gmail.com
-          </a>
-        </li>
-        <li class="contacts-list-item">
-          <a
-            class="contacts-link"
-            href="https://www.linkedin.com/in/vera-korzun-176ab598/"
-            target="_blank"
-          >
-            Vera-Korzun
-          </a>
-        </li>
-        <li class="contacts-list-item">
-          <a class="contacts-link" href="https://t.me/Vera_KM" target="_blank"
-            >Vera_KM
-          </a>
-        </li>
-      </ul>
-    </section>
+ <body>
+    <div class="container">
+      <aside>
+        <header>
+          <h2>Vera Korzun</h2>
+          <h3>Front-end developer</h3>
+        </header>
+
+        <section>
+          <h3>Contacts</h3>
+          <ul>
+            <li>
+              <a href="tel:+46765771605">
+                +46765771605
+              </a>
+            </li>
+            <li>
+              <a href="mailto:veraminich@gmail.com">
+                veraminich@gmail.com
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/vera-korzun-176ab598/"
+              >
+                Vera-Korzun
+              </a>
+            </li>
+            <li>
+              <span>Vera_KM</span>
+            </li>
+          </ul>
+        </section>
+
+        <section>
+          <h3>Technical skills</h3>
+          <ul>
+            <li>HTML5</li>
+            <li>CSS3/SASS</li>
+            <li>JavaScript</li>
+            <li>React Js, Redux</li>
+            <li>Node Js</li>
+            <li>VSCode</li>
+            <li>Figma</li>
+            <li>GIT/GitHub</li>
+            <li>MongoDB</li>
+          </ul>
+        </section>
+        <section>
+          <h3>Soft skills</h3>
+          <ul>
+            <li>Desire to learn</li>
+            <li>Critical thinking</li>
+            <li>Problem solving</li>
+            <li>Teamwork</li>
+            <li>Result-oriented</li>
+            <li>Enthusiasm</li>
+          </ul>
+        </section>
+        <section>
+          <h3>Languages</h3>
+          <ul>
+            <li>English - intermediate</li>
+            <li>Swedish -intermediate</li>
+            <li>Russian - native</li>
+          </ul>
+        </section>
+      </aside>
+      <div>
+        <section>
+          <h4>Information about me</h4>
+          <p>
+            I am looking for a junior front-end developer position to provide
+            great results for my future team, gain experience and improve my
+            developer skills.
+          </p>
+        </section>
+        <section>
+          <h4>My work experience</h4>
+          <ul>
+            <li>
+              <a href="https://read-book-teamproject.netlify.app/"
+                >Books Reading</a
+              >
+              <ul>
+                <li>
+                  The application allows you to control how long you read a
+                  certain number of books in a specified period of time.
+                </li>
+                <li>The teamproject is built with ReactJs and NodeJs.</li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://vera-korzun-teamproject-3.netlify.app/"
+                >SlimMom</a
+              >
+              <ul>
+                <li>Web-app for diet-planning and calories calculation.</li>
+                <li>The teamproject is built with ReactJS and Redux.</li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://vera-korzun.github.io/Project-2/"
+                >OLX SHOP
+              </a>
+              <ul>
+                <li>
+                  Online shop for people who want to publish an advertisement
+                  for the sale, purchase or advertisement of a product. .
+                </li>
+                <li>
+                  The teamproject is built with webpack, written in vanilla JS.
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://vera-korzun.github.io/Project-1/"
+                >HelloEN
+              </a>
+              <ul>
+                <li>Information portal for english teaching school.</li>
+                <li>The teamproject is built with JS, HTML, SASS, FlexBox.</li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h4>My education</h4>
+          <ul>
+            <li>
+              <p>2020-2021</p>
+              <div>
+                <p>Fullstack JS Developer</p>
+                <p>GoIT, Ukraine</p>
+              </div>
+            </li>
+            <li>
+              <p>2017</p>
+              <div>
+                <p>
+                  Foreign technicians and engineers
+                </p>
+                <p>UTI, Sweden</p>
+              </div>
+            </li>
+            <li>
+              <p>2010-2012</p>
+              <div>
+                <p>Finance</p>
+                <p>
+                  School of Business of Belarusian State University, Belarus
+                </p>
+                <p>financier</p>
+              </div>
+            </li>
+            <li>
+              <p>2005-2010</p>
+              <div>
+                <p>Radiophysics and computer technologies</p>
+                <p>Belarusian State University, Belarus</p>
+                <p>physicist-engineer</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h4>Code examples</h4>
+          <p>
+            You can find more examples of my code
+            <a href="https://github.com/Vera-Korzun"
+              >here</a
+            >
+          </p>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
