--- a/index.html
+++ b/index.html
@@ -1,46 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,700;1,400&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./style.css">
-</head>
- <body>
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <div class="container">
       <aside>
         <header>
+          <img src="./img/vera_korzun.jpg" alt="My photo" />
           <h2>Vera Korzun</h2>
           <h3>Front-end developer</h3>
         </header>
 
         <section>
           <h3>Contacts</h3>
-          <ul>
+          <ul class="list">
             <li>
-              <a href="tel:+46765771605">
-                +46765771605
-              </a>
+              <img
+                src="./icon/phone.svg"
+                alt="Phone icon"
+                width="30"
+                height="30"
+              />
+              <a class="link" href="tel:+46765771605"> +46765771605 </a>
             </li>
             <li>
-              <a href="mailto:veraminich@gmail.com">
+              <img
+                src="./icon/email.svg"
+                alt="Email icon"
+                width="30"
+                height="30"
+              />
+              <a class="link" href="mailto:veraminich@gmail.com">
                 veraminich@gmail.com
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/vera-korzun-176ab598/"
+              <img
+                src="./icon/linkedin.svg"
+                alt="Linkedin icon"
+                width="30"
+                height="30"
+              />
+              <a
+                class="link"
+                href="https://www.linkedin.com/in/vera-korzun-176ab598/"
               >
                 Vera-Korzun
               </a>
             </li>
             <li>
+              <img
+                src="./icon/paper-plane.svg"
+                alt="Telegram icon"
+                width="30"
+                height="30"
+              />
               <span>Vera_KM</span>
             </li>
           </ul>
@@ -48,7 +75,7 @@
 
         <section>
           <h3>Technical skills</h3>
-          <ul>
+          <ul class="list">
             <li>HTML5</li>
             <li>CSS3/SASS</li>
             <li>JavaScript</li>
@@ -62,7 +89,7 @@
         </section>
         <section>
           <h3>Soft skills</h3>
-          <ul>
+          <ul class="list">
             <li>Desire to learn</li>
             <li>Critical thinking</li>
             <li>Problem solving</li>
@@ -73,7 +100,7 @@
         </section>
         <section>
           <h3>Languages</h3>
-          <ul>
+          <ul class="list">
             <li>English - intermediate</li>
             <li>Swedish -intermediate</li>
             <li>Russian - native</li>
@@ -91,12 +118,12 @@
         </section>
         <section>
           <h4>My work experience</h4>
-          <ul>
+          <ul class="list">
             <li>
-              <a href="https://read-book-teamproject.netlify.app/"
+              <a class="link" href="https://read-book-teamproject.netlify.app/"
                 >Books Reading</a
               >
-              <ul>
+              <ul class="list">
                 <li>
                   The application allows you to control how long you read a
                   certain number of books in a specified period of time.
@@ -105,19 +132,21 @@
               </ul>
             </li>
             <li>
-              <a href="https://vera-korzun-teamproject-3.netlify.app/"
+              <a
+                class="link"
+                href="https://vera-korzun-teamproject-3.netlify.app/"
                 >SlimMom</a
               >
-              <ul>
+              <ul class="list">
                 <li>Web-app for diet-planning and calories calculation.</li>
                 <li>The teamproject is built with ReactJS and Redux.</li>
               </ul>
             </li>
             <li>
-              <a href="https://vera-korzun.github.io/Project-2/"
+              <a class="link" href="https://vera-korzun.github.io/Project-2/"
                 >OLX SHOP
               </a>
-              <ul>
+              <ul class="list">
                 <li>
                   Online shop for people who want to publish an advertisement
                   for the sale, purchase or advertisement of a product. .
@@ -128,10 +157,10 @@
               </ul>
             </li>
             <li>
-              <a href="https://vera-korzun.github.io/Project-1/"
+              <a class="link" href="https://vera-korzun.github.io/Project-1/"
                 >HelloEN
               </a>
-              <ul>
+              <ul class="list">
                 <li>Information portal for english teaching school.</li>
                 <li>The teamproject is built with JS, HTML, SASS, FlexBox.</li>
               </ul>
@@ -140,7 +169,7 @@
         </section>
         <section>
           <h4>My education</h4>
-          <ul>
+          <ul class="list">
             <li>
               <p>2020-2021</p>
               <div>
@@ -151,9 +180,7 @@
             <li>
               <p>2017</p>
               <div>
-                <p>
-                  Foreign technicians and engineers
-                </p>
+                <p>Foreign technicians and engineers</p>
                 <p>UTI, Sweden</p>
               </div>
             </li>
@@ -179,11 +206,10 @@
         </section>
         <section>
           <h4>Code examples</h4>
+          <img src="./img/code.jpg" alt="Code examples" width="700" />
           <p>
             You can find more examples of my code
-            <a href="https://github.com/Vera-Korzun"
-              >here</a
-            >
+            <a href="https://github.com/Vera-Korzun">here</a>
           </p>
         </section>
       </div>
