feat: add styles

--- a/index.html
+++ b/index.html
@@ -17,52 +17,58 @@
   </head>
   <body>
     <div class="container">
-      <aside>
+      <aside class="left-part">
         <header>
-          <img src="./img/vera_korzun.jpg" alt="My photo" />
-          <h2>Vera Korzun</h2>
-          <h3>Front-end developer</h3>
+          <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo" />
+          <h1 class="main-title">Vera Korzun</h1>
+          <h2 class="main-title-description">Front-end developer</h2>
         </header>
 
-        <section>
-          <h3>Contacts</h3>
+        <section class="contacts">
+          <h3 class="second-title">Contacts</h3>
           <ul class="list">
-            <li>
+            <li class="contacts-list-item">
               <img
+                class="contacts-list-img"
                 src="./icon/phone.svg"
                 alt="Phone icon"
                 width="30"
                 height="30"
               />
-              <a class="link" href="tel:+46765771605"> +46765771605 </a>
+              <a class="link contacts-link" href="tel:+46765771605">
+                +46765771605
+              </a>
             </li>
-            <li>
+            <li class="contacts-list-item">
               <img
+                class="contacts-list-img"
                 src="./icon/email.svg"
                 alt="Email icon"
                 width="30"
                 height="30"
               />
-              <a class="link" href="mailto:veraminich@gmail.com">
+              <a class="link contacts-link" href="mailto:veraminich@gmail.com">
                 veraminich@gmail.com
               </a>
             </li>
-            <li>
+            <li class="contacts-list-item">
               <img
+                class="contacts-list-img"
                 src="./icon/linkedin.svg"
                 alt="Linkedin icon"
                 width="30"
                 height="30"
               />
               <a
-                class="link"
+                class="link contacts-link"
                 href="https://www.linkedin.com/in/vera-korzun-176ab598/"
               >
                 Vera-Korzun
               </a>
             </li>
-            <li>
+            <li class="contacts-list-item">
               <img
+                class="contacts-list-img"
                 src="./icon/paper-plane.svg"
                 alt="Telegram icon"
                 width="30"
@@ -73,37 +79,37 @@
           </ul>
         </section>
 
-        <section>
-          <h3>Technical skills</h3>
-          <ul class="list">
-            <li>HTML5</li>
-            <li>CSS3/SASS</li>
-            <li>JavaScript</li>
-            <li>React Js, Redux</li>
-            <li>Node Js</li>
-            <li>VSCode</li>
-            <li>Figma</li>
-            <li>GIT/GitHub</li>
-            <li>MongoDB</li>
+        <section class="tech-skills">
+          <h3 class="second-title">Technical skills</h3>
+          <ul class="tech-skills-list">
+            <li class="tech-list-item">HTML5</li>
+            <li class="tech-list-item">CSS3/SASS</li>
+            <li class="tech-list-item">JavaScript</li>
+            <li class="tech-list-item">React Js, Redux</li>
+            <li class="tech-list-item">Node Js</li>
+            <li class="tech-list-item">VSCode</li>
+            <li class="tech-list-item">Figma</li>
+            <li class="tech-list-item">GIT/GitHub</li>
+            <li class="tech-list-item">MongoDB</li>
           </ul>
         </section>
         <section>
-          <h3>Soft skills</h3>
+          <h3 class="second-title">Soft skills</h3>
           <ul class="list">
-            <li>Desire to learn</li>
-            <li>Critical thinking</li>
-            <li>Problem solving</li>
-            <li>Teamwork</li>
-            <li>Result-oriented</li>
-            <li>Enthusiasm</li>
+            <li class="soft-list-item">Desire to learn</li>
+            <li class="soft-list-item">Critical thinking</li>
+            <li class="soft-list-item">Problem solving</li>
+            <li class="soft-list-item">Teamwork</li>
+            <li class="soft-list-item">Result-oriented</li>
+            <li class="soft-list-item">Enthusiasm</li>
           </ul>
         </section>
         <section>
-          <h3>Languages</h3>
-          <ul class="list">
-            <li>English - intermediate</li>
-            <li>Swedish -intermediate</li>
-            <li>Russian - native</li>
+          <h3 class="second-title">Languages</h3>
+          <ul class="languages-list">
+            <li class="languages-list-item">English - intermediate</li>
+            <li class="languages-list-item">Swedish -intermediate</li>
+            <li class="languages-list-item">Russian - native</li>
           </ul>
         </section>
       </aside>
