--- a/index.html
+++ b/index.html
@@ -17,208 +17,236 @@
   </head>
   <body>
     <div class="container">
-      <aside class="left-part">
-        <header>
-          <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo" />
-          <h1 class="main-title">Vera Korzun</h1>
-          <h2 class="main-title-description">Front-end developer</h2>
-        </header>
+      <div class="main-part">
+        <aside class="left-part">
+          <header>
+            <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo" />
+            <h1 class="main-title">Vera Korzun</h1>
+            <h2 class="main-title-description">Front-end developer</h2>
+          </header>
 
-        <section class="contacts">
-          <h3 class="second-title">Contacts</h3>
-          <ul class="list">
-            <li class="contacts-list-item">
-              <img
-                class="contacts-list-img"
-                src="./icon/phone.svg"
-                alt="Phone icon"
-                width="30"
-                height="30"
-              />
-              <a class="link contacts-link" href="tel:+46765771605">
-                +46765771605
-              </a>
-            </li>
-            <li class="contacts-list-item">
-              <img
-                class="contacts-list-img"
-                src="./icon/email.svg"
-                alt="Email icon"
-                width="30"
-                height="30"
-              />
-              <a class="link contacts-link" href="mailto:veraminich@gmail.com">
-                veraminich@gmail.com
-              </a>
-            </li>
-            <li class="contacts-list-item">
-              <img
-                class="contacts-list-img"
-                src="./icon/linkedin.svg"
-                alt="Linkedin icon"
-                width="30"
-                height="30"
-              />
-              <a
-                class="link contacts-link"
-                href="https://www.linkedin.com/in/vera-korzun-176ab598/"
-              >
-                Vera-Korzun
-              </a>
-            </li>
-            <li class="contacts-list-item">
-              <img
-                class="contacts-list-img"
-                src="./icon/paper-plane.svg"
-                alt="Telegram icon"
-                width="30"
-                height="30"
-              />
-              <span>Vera_KM</span>
-            </li>
-          </ul>
-        </section>
+          <section class="contacts">
+            <h3 class="second-title">Contacts</h3>
+            <ul class="list">
+              <li class="contacts-list-item">
+                <img
+                  class="contacts-list-img"
+                  src="./icon/phone.svg"
+                  alt="Phone icon"
+                  width="30"
+                  height="30"
+                />
+                <a class="link contacts-link" href="tel:+46765771605">
+                  +46765771605
+                </a>
+              </li>
+              <li class="contacts-list-item">
+                <img
+                  class="contacts-list-img"
+                  src="./icon/email.svg"
+                  alt="Email icon"
+                  width="30"
+                  height="30"
+                />
+                <a
+                  class="link contacts-link"
+                  href="mailto:veraminich@gmail.com"
+                >
+                  veraminich@gmail.com
+                </a>
+              </li>
+              <li class="contacts-list-item">
+                <img
+                  class="contacts-list-img"
+                  src="./icon/linkedin.svg"
+                  alt="Linkedin icon"
+                  width="30"
+                  height="30"
+                />
+                <a
+                  class="link contacts-link"
+                  href="https://www.linkedin.com/in/vera-korzun-176ab598/"
+                >
+                  Vera-Korzun
+                </a>
+              </li>
+              <li class="contacts-list-item">
+                <img
+                  class="contacts-list-img"
+                  src="./icon/paper-plane.svg"
+                  alt="Telegram icon"
+                  width="30"
+                  height="30"
+                />
+                <span>Vera_KM</span>
+              </li>
+            </ul>
+          </section>
 
-        <section class="tech-skills">
-          <h3 class="second-title">Technical skills</h3>
-          <ul class="tech-skills-list">
-            <li class="tech-list-item">HTML5</li>
-            <li class="tech-list-item">CSS3/SASS</li>
-            <li class="tech-list-item">JavaScript</li>
-            <li class="tech-list-item">React Js, Redux</li>
-            <li class="tech-list-item">Node Js</li>
-            <li class="tech-list-item">VSCode</li>
-            <li class="tech-list-item">Figma</li>
-            <li class="tech-list-item">GIT/GitHub</li>
-            <li class="tech-list-item">MongoDB</li>
-          </ul>
-        </section>
-        <section>
-          <h3 class="second-title">Soft skills</h3>
-          <ul class="list">
-            <li class="soft-list-item">Desire to learn</li>
-            <li class="soft-list-item">Critical thinking</li>
-            <li class="soft-list-item">Problem solving</li>
-            <li class="soft-list-item">Teamwork</li>
-            <li class="soft-list-item">Result-oriented</li>
-            <li class="soft-list-item">Enthusiasm</li>
-          </ul>
-        </section>
-        <section>
-          <h3 class="second-title">Languages</h3>
-          <ul class="languages-list">
-            <li class="languages-list-item">English - intermediate</li>
-            <li class="languages-list-item">Swedish -intermediate</li>
-            <li class="languages-list-item">Russian - native</li>
-          </ul>
-        </section>
-      </aside>
-      <div>
-        <section>
-          <h4>Information about me</h4>
-          <p>
-            I am looking for a junior front-end developer position to provide
-            great results for my future team, gain experience and improve my
-            developer skills.
-          </p>
-        </section>
-        <section>
-          <h4>My work experience</h4>
-          <ul class="list">
-            <li>
-              <a class="link" href="https://read-book-teamproject.netlify.app/"
-                >Books Reading</a
-              >
-              <ul class="list">
-                <li>
-                  The application allows you to control how long you read a
-                  certain number of books in a specified period of time.
-                </li>
-                <li>The teamproject is built with ReactJs and NodeJs.</li>
-              </ul>
-            </li>
-            <li>
-              <a
-                class="link"
-                href="https://vera-korzun-teamproject-3.netlify.app/"
-                >SlimMom</a
-              >
-              <ul class="list">
-                <li>Web-app for diet-planning and calories calculation.</li>
-                <li>The teamproject is built with ReactJS and Redux.</li>
-              </ul>
-            </li>
-            <li>
-              <a class="link" href="https://vera-korzun.github.io/Project-2/"
-                >OLX SHOP
-              </a>
-              <ul class="list">
-                <li>
-                  Online shop for people who want to publish an advertisement
-                  for the sale, purchase or advertisement of a product. .
-                </li>
-                <li>
-                  The teamproject is built with webpack, written in vanilla JS.
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a class="link" href="https://vera-korzun.github.io/Project-1/"
-                >HelloEN
-              </a>
-              <ul class="list">
-                <li>Information portal for english teaching school.</li>
-                <li>The teamproject is built with JS, HTML, SASS, FlexBox.</li>
-              </ul>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h4>My education</h4>
-          <ul class="list">
-            <li>
-              <p>2020-2021</p>
-              <div>
-                <p>Fullstack JS Developer</p>
-                <p>GoIT, Ukraine</p>
-              </div>
-            </li>
-            <li>
-              <p>2017</p>
-              <div>
-                <p>Foreign technicians and engineers</p>
-                <p>UTI, Sweden</p>
-              </div>
-            </li>
-            <li>
-              <p>2010-2012</p>
-              <div>
-                <p>Finance</p>
-                <p>
-                  School of Business of Belarusian State University, Belarus
-                </p>
-                <p>financier</p>
-              </div>
-            </li>
-            <li>
-              <p>2005-2010</p>
-              <div>
-                <p>Radiophysics and computer technologies</p>
-                <p>Belarusian State University, Belarus</p>
-                <p>physicist-engineer</p>
-              </div>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h4>Code examples</h4>
-          <img src="./img/code.jpg" alt="Code examples" width="700" />
-          <p>
-            You can find more examples of my code
-            <a href="https://github.com/Vera-Korzun">here</a>
-          </p>
-        </section>
+          <section class="tech-skills">
+            <h3 class="second-title">Technical skills</h3>
+            <ul class="tech-skills-list">
+              <li class="tech-list-item">HTML5</li>
+              <li class="tech-list-item">CSS3/SASS</li>
+              <li class="tech-list-item">JavaScript</li>
+              <li class="tech-list-item">React Js, Redux</li>
+              <li class="tech-list-item">Node Js</li>
+              <li class="tech-list-item">VSCode</li>
+              <li class="tech-list-item">Figma</li>
+              <li class="tech-list-item">GIT/GitHub</li>
+              <li class="tech-list-item">MongoDB</li>
+            </ul>
+          </section>
+          <section>
+            <h3 class="second-title">Soft skills</h3>
+            <ul class="list">
+              <li class="soft-list-item">Desire to learn</li>
+              <li class="soft-list-item">Critical thinking</li>
+              <li class="soft-list-item">Problem solving</li>
+              <li class="soft-list-item">Teamwork</li>
+              <li class="soft-list-item">Result-oriented</li>
+              <li class="soft-list-item">Enthusiasm</li>
+            </ul>
+          </section>
+          <section>
+            <h3 class="second-title">Languages</h3>
+            <ul class="languages-list">
+              <li class="languages-list-item">English - intermediate</li>
+              <li class="languages-list-item">Swedish -intermediate</li>
+              <li class="languages-list-item">Russian - native</li>
+            </ul>
+          </section>
+        </aside>
+        <div>
+          <section>
+            <h4>Information about me</h4>
+            <p>
+              I am looking for a junior front-end developer position to provide
+              great results for my future team, gain experience and improve my
+              developer skills.
+            </p>
+          </section>
+          <section>
+            <h4>My work experience</h4>
+            <ul class="list">
+              <li>
+                <a
+                  class="link"
+                  href="https://read-book-teamproject.netlify.app/"
+                  >Books Reading</a
+                >
+                <ul class="list">
+                  <li>
+                    The application allows you to control how long you read a
+                    certain number of books in a specified period of time.
+                  </li>
+                  <li>The teamproject is built with ReactJs and NodeJs.</li>
+                </ul>
+              </li>
+              <li>
+                <a
+                  class="link"
+                  href="https://vera-korzun-teamproject-3.netlify.app/"
+                  >SlimMom</a
+                >
+                <ul class="list">
+                  <li>Web-app for diet-planning and calories calculation.</li>
+                  <li>The teamproject is built with ReactJS and Redux.</li>
+                </ul>
+              </li>
+              <li>
+                <a class="link" href="https://vera-korzun.github.io/Project-2/"
+                  >OLX SHOP
+                </a>
+                <ul class="list">
+                  <li>
+                    Online shop for people who want to publish an advertisement
+                    for the sale, purchase or advertisement of a product. .
+                  </li>
+                  <li>
+                    The teamproject is built with webpack, written in vanilla
+                    JS.
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a class="link" href="https://vera-korzun.github.io/Project-1/"
+                  >HelloEN
+                </a>
+                <ul class="list">
+                  <li>Information portal for english teaching school.</li>
+                  <li>
+                    The teamproject is built with JS, HTML, SASS, FlexBox.
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </section>
+          <section>
+            <h4>My education</h4>
+            <ul class="list">
+              <li>
+                <p>2020-2021</p>
+                <div>
+                  <p>Fullstack JS Developer</p>
+                  <p>GoIT, Ukraine</p>
+                </div>
+              </li>
+              <li>
+                <p>2017</p>
+                <div>
+                  <p>Foreign technicians and engineers</p>
+                  <p>UTI, Sweden</p>
+                </div>
+              </li>
+              <li>
+                <p>2010-2012</p>
+                <div>
+                  <p>Finance</p>
+                  <p>
+                    School of Business of Belarusian State University, Belarus
+                  </p>
+                  <p>financier</p>
+                </div>
+              </li>
+              <li>
+                <p>2005-2010</p>
+                <div>
+                  <p>Radiophysics and computer technologies</p>
+                  <p>Belarusian State University, Belarus</p>
+                  <p>physicist-engineer</p>
+                </div>
+              </li>
+            </ul>
+          </section>
+          <section>
+            <h4>Code examples</h4>
+            <img src="./img/code.jpg" alt="Code examples" width="700" />
+            <p>
+              You can find more examples of my code
+              <a href="https://github.com/Vera-Korzun">here</a>
+            </p>
+          </section>
+        </div>
       </div>
+
+      <footer class="cv-footer">
+        <div>
+          <a class="link" href="https://github.com/Vera-Korzun" target="_blank"
+            >My GitHub</a
+          >
+        </div>
+        <div>
+          <a class="link" href="https://rs.school/js/" target="_blank">
+            <img
+              src="./icon/rs_school_js.svg"
+              alt="RS School logo"
+              width="100"
+            />
+          </a>
+        </div>
+        <div>2022</div>
+      </footer>
     </div>
   </body>
 </html>
