fix:added changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="main-part">
         <aside class="left-part">
-          <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo" />
+          <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo">
           <h1 class="main-title">Vera Korzun</h1>
           <h2 class="main-title-description">Front-end developer</h2>
 
@@ -33,8 +33,7 @@
                   src="./icon/phone.svg"
                   alt="Phone icon"
                   width="30"
-                  height="30"
-                />
+                  height="30">
                 <a class="link contacts-link" href="tel:+46765771605">
                   +46765771605
                 </a>
@@ -45,8 +44,7 @@
                   src="./icon/email.svg"
                   alt="Email icon"
                   width="30"
-                  height="30"
-                />
+                  height="30">
                 <a
                   class="link contacts-link"
                   href="mailto:veraminich@gmail.com"
@@ -60,8 +58,7 @@
                   src="./icon/linkedin.svg"
                   alt="Linkedin icon"
                   width="30"
-                  height="30"
-                />
+                  height="30">
                 <a
                   class="link contacts-link"
                   href="https://www.linkedin.com/in/vera-korzun-176ab598/"
@@ -75,8 +72,7 @@
                   src="./icon/paper-plane.svg"
                   alt="Telegram icon"
                   width="30"
-                  height="30"
-                />
+                  height="30">
                 <span>Vera_KM</span>
               </li>
             </ul>
