fix:added changes

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <div class="container">
       <div class="main-part">
-        <aside class="left-part">
-          <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo">
+        <img class="left-part">
+          <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo"></img>
           <h1 class="main-title">Vera Korzun</h1>
           <h2 class="main-title-description">Front-end developer</h2>
 
