fix:added changes

--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,700;1,400&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="container">
       <div class="main-part">
-        <img class="left-part">
-          <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo"></img>
+        <aside class="left-part">
+          <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo" />
           <h1 class="main-title">Vera Korzun</h1>
           <h2 class="main-title-description">Front-end developer</h2>
-
           <section class="contacts">
             <h3 class="second-title">Contacts</h3>
             <ul class="list">
@@ -33,7 +35,8 @@
                   src="./icon/phone.svg"
                   alt="Phone icon"
                   width="30"
-                  height="30">
+                  height="30"
+                />
                 <a class="link contacts-link" href="tel:+46765771605">
                   +46765771605
                 </a>
@@ -44,7 +47,8 @@
                   src="./icon/email.svg"
                   alt="Email icon"
                   width="30"
-                  height="30">
+                  height="30"
+                />
                 <a
                   class="link contacts-link"
                   href="mailto:veraminich@gmail.com"
@@ -58,7 +62,8 @@
                   src="./icon/linkedin.svg"
                   alt="Linkedin icon"
                   width="30"
-                  height="30">
+                  height="30"
+                />
                 <a
                   class="link contacts-link"
                   href="https://www.linkedin.com/in/vera-korzun-176ab598/"
@@ -72,12 +77,12 @@
                   src="./icon/paper-plane.svg"
                   alt="Telegram icon"
                   width="30"
-                  height="30">
+                  height="30"
+                />
                 <span>Vera_KM</span>
               </li>
             </ul>
           </section>
-
           <section class="tech-skills">
             <h3 class="second-title">Technical skills</h3>
             <ul class="tech-skills-list">
@@ -277,7 +282,8 @@ const logError = id => {
   console.warn(`Error processing transaction ${id}. Please try again later.`);
 };
                        
-                    </pre>
+                    </pre
+            >
             <p>
               You can find more examples of my code
               <a href="https://github.com/Vera-Korzun">here</a>
