--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="main-part">
         <aside class="left-part">
-          <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo"></img>
+          <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo">
           <h1 class="main-title">Vera Korzun</h1>
           <h2 class="main-title-description">Front-end developer</h2>
           <section class="contacts">
@@ -35,7 +35,7 @@
                   src="./icon/phone.svg"
                   alt="Phone icon"
                   width="30"
-                  height="30"></img>
+                  height="30">
                 <a class="link contacts-link" href="tel:+46765771605">
                   +46765771605
                 </a>
@@ -46,7 +46,7 @@
                   src="./icon/email.svg"
                   alt="Email icon"
                   width="30"
-                  height="30"></img>
+                  height="30">
                 <a
                   class="link contacts-link"
                   href="mailto:veraminich@gmail.com"
@@ -60,7 +60,7 @@
                   src="./icon/linkedin.svg"
                   alt="Linkedin icon"
                   width="30"
-                  height="30"></img>
+                  height="30">
                 <a
                   class="link contacts-link"
                   href="https://www.linkedin.com/in/vera-korzun-176ab598/"
@@ -74,7 +74,7 @@
                   src="./icon/paper-plane.svg"
                   alt="Telegram icon"
                   width="30"
-                  height="30"></img>
+                  height="30">
                 <span>Vera_KM</span>
               </li>
             </ul>
