fix: added changes

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                   height="30">
                 <a
                   class="link contacts-link"
-                  href="mailto:veraminich@gmail.com"
-                >
+                  href="mailto:veraminich@gmail.com">
                   veraminich@gmail.com
                 </a>
               </li>
@@ -60,8 +59,7 @@
                   height="30">
                 <a
                   class="link contacts-link"
-                  href="https://www.linkedin.com/in/vera-korzun-176ab598/"
-                >
+                  href="https://www.linkedin.com/in/vera-korzun-176ab598/">
                   Vera-Korzun
                 </a>
               </li>
@@ -116,23 +114,19 @@
               <ul class="list navigation-list">
                 <li class="navigation-list-item">
                   <a href="#info" class="link navigation-link"
-                    >Information about me</a
-                  >
+                    >Information about me</a>
                 </li>
                 <li class="navigation-list-item">
                   <a href="#experience" class="link navigation-link"
-                    >My work experience</a
-                  >
+                    >My work experience</a>
                 </li>
                 <li class="navigation-list-item">
                   <a href="#education" class="link navigation-link"
-                    >My education</a
-                  >
+                    >My education</a>
                 </li>
                 <li class="navigation-list-item">
                   <a href="#examples" class="link navigation-link"
-                    >Code examples</a
-                  >
+                    >Code examples</a>
                 </li>
               </ul>
             </nav>
@@ -152,8 +146,7 @@
                 <a
                   class="link experience-link"
                   href="https://read-book-teamproject.netlify.app/"
-                  >Books Reading</a
-                >
+                  >Books Reading</a>
                 <ul class="experience-list-description">
                   <li>
                     The application allows you to control how long you read a
@@ -166,8 +159,7 @@
                 <a
                   class="link experience-link"
                   href="https://vera-korzun-teamproject-3.netlify.app/"
-                  >SlimMom</a
-                >
+                  >SlimMom</a>
                 <ul class="experience-list-description">
                   <li>Web-app for diet-planning and calories calculation.</li>
                   <li>The teamproject is built with ReactJS and Redux.</li>
@@ -273,10 +265,8 @@ const logSuccess = (result) => {
 };
 const logError = id => {
   console.warn(`Error processing transaction ${id}. Please try again later.`);
-};
-                       
-                    </pre
-            >
+};                       
+                    </pre>
             <p>
               You can find more examples of my code
               <a href="https://github.com/Vera-Korzun">here</a>
@@ -284,15 +274,13 @@ const logError = id => {
           </section>
         </div>
       </div>
-
       <footer class="cv-footer">
         <div>
           <a
             class="link footer-link"
             href="https://github.com/Vera-Korzun"
             target="_blank"
-            >My GitHub</a
-          >
+            >My GitHub</a>
         </div>
         <div>
           <a class="link" href="https://rs.school/js/" target="_blank">
