--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <div class="container">
+<!--     <div class="container">
       <div class="main-part">
         <aside class="left-part">
           <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo">
@@ -292,6 +292,6 @@ const logError = id => {
         </div>
         <div>2022</div>
       </footer>
-    </div>
+    </div> -->
   </body>
 </html>
