--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-<!--     <div class="container">
+    <div class="container">
       <div class="main-part">
         <aside class="left-part">
           <img class="main-img" src="./img/vera_korzun.jpg" alt="My photo">
@@ -240,7 +240,7 @@
           </section>
           <section class="examples">
             <h4 class="second-title">Code examples</h4>
-            <pre class="examples-code">
+<!--             <pre class="examples-code">
 const randomIntegerFromInterval = (min, max) => {
   return Math.floor(Math.random() * (max - min + 1) + min);
 };
@@ -266,7 +266,7 @@ const logSuccess = (result) => {
 const logError = id => {
   console.warn(`Error processing transaction ${id}. Please try again later.`);
 };                       
-                    </pre>
+                    </pre> -->
             <p>
               You can find more examples of my code
               <a href="https://github.com/Vera-Korzun">here</a>
@@ -292,6 +292,6 @@ const logError = id => {
         </div>
         <div>2022</div>
       </footer>
-    </div> -->
+    </div> 
   </body>
 </html>
