--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           </section>
           <section class="examples">
             <h4 class="second-title">Code examples</h4>
-<!--             <pre class="examples-code">
+             <code class="examples-code">
 const randomIntegerFromInterval = (min, max) => {
   return Math.floor(Math.random() * (max - min + 1) + min);
 };
@@ -266,7 +266,7 @@ const logSuccess = (result) => {
 const logError = id => {
   console.warn(`Error processing transaction ${id}. Please try again later.`);
 };                       
-                    </pre> -->
+                    </code>
             <p>
               You can find more examples of my code
               <a href="https://github.com/Vera-Korzun">here</a>
