--- a/index.html
+++ b/index.html
@@ -241,14 +241,14 @@
           <section class="examples">
             <h4 class="second-title">Code examples</h4>
              <code class="examples-code">
-const randomIntegerFromInterval = (min, max) => {
+const randomIntegerFromInterval = (min, max) =&gt; {
   return Math.floor(Math.random() * (max - min + 1) + min);
 };
 
-const makeTransaction = (transaction) => {
-  return new Promise((resolve, reject) => {
+const makeTransaction = (transaction) =&gt; {
+  return new Promise((resolve, reject) =&gt; {
     const delay = randomIntegerFromInterval(200, 500);
-    setTimeout(() => {
+    setTimeout(() =&gt; {
       const canProcess = Math.random() > 0.3;
       if (canProcess) {
         const result = {id: transaction.id, delay:delay}
@@ -260,10 +260,10 @@ const makeTransaction = (transaction) => {
   });
 };
 
-const logSuccess = (result) => {
+const logSuccess = (result) =&gt; {
   console.log(`Transaction ${result.id} processed in ${result.delay}ms`);
 };
-const logError = id => {
+const logError = id =&gt; {
   console.warn(`Error processing transaction ${id}. Please try again later.`);
 };                       
                     </code>
