--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ const makeTransaction = (transaction) =&gt; {
   return new Promise((resolve, reject) =&gt; {
     const delay = randomIntegerFromInterval(200, 500);
     setTimeout(() =&gt; {
-      const canProcess = Math.random() > 0.3;
+      const canProcess = Math.random() &gt; 0.3;
       if (canProcess) {
         const result = {id: transaction.id, delay:delay}
         resolve(result);
