fix: raw ">" changed  as "&gt;"

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           </section>
           <section class="examples">
             <h4 class="second-title">Code examples</h4>
-             <code class="examples-code">
+             <pre class="examples-code">
 const randomIntegerFromInterval = (min, max) =&gt; {
   return Math.floor(Math.random() * (max - min + 1) + min);
 };
@@ -265,8 +265,9 @@ const logSuccess = (result) =&gt; {
 };
 const logError = id =&gt; {
   console.warn(`Error processing transaction ${id}. Please try again later.`);
-};                       
-                    </code>
+};
+                       
+                    </pre>
             <p>
               You can find more examples of my code
               <a href="https://github.com/Vera-Korzun">here</a>
