fix: deleted trailing whitespace

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <h4 class="second-title">Code examples</h4>
             <pre class="examples-code">
 const randomIntegerFromInterval = (min, max) =&gt; {
-  return Math.floor(Math.random() * (max - min + 1) + min);
+ return Math.floor(Math.random() * (max - min + 1) + min);
 };
 
 const makeTransaction = (transaction) =&gt; {
@@ -265,8 +265,7 @@ const logSuccess = (result) =&gt; {
 };
 const logError = id =&gt; {
   console.warn(`Error processing transaction ${id}. Please try again later.`);
-};
-</pre>
+};</pre>
             <p>
               You can find more examples of my code
               <a href="https://github.com/Vera-Korzun">here</a>
