--- a/index.html
+++ b/index.html
@@ -242,29 +242,26 @@
             <h4 class="second-title">Code examples</h4>
             <pre class="examples-code">
 const randomIntegerFromInterval = (min, max) =&gt; {
- return Math.floor(Math.random() * (max - min + 1) + min);
+return Math.floor(Math.random() * (max - min + 1) + min);
 };
-
 const makeTransaction = (transaction) =&gt; {
-  return new Promise((resolve, reject) =&gt; {
-    const delay = randomIntegerFromInterval(200, 500);
-    setTimeout(() =&gt; {
-      const canProcess = Math.random() &gt; 0.3;
-      if (canProcess) {
-        const result = {id: transaction.id, delay:delay}
-        resolve(result);
-      } else {
-        reject(transaction.id);
-      }
-    }, delay);
-  });
+return new Promise((resolve, reject) =&gt; {
+const delay = randomIntegerFromInterval(200, 500);
+setTimeout(() =&gt; {
+const canProcess = Math.random() &gt; 0.3;
+if (canProcess) {
+const result = {id: transaction.id, delay:delay}
+resolve(result);
+} else {
+reject(transaction.id);
+}}, delay);
+});
 };
-
 const logSuccess = (result) =&gt; {
-  console.log(`Transaction ${result.id} processed in ${result.delay}ms`);
+console.log(`Transaction ${result.id} processed in ${result.delay}ms`);
 };
 const logError = id =&gt; {
-  console.warn(`Error processing transaction ${id}. Please try again later.`);
+console.warn(`Error processing transaction ${id}. Please try again later.`);
 };</pre>
             <p>
               You can find more examples of my code
